# RDrive

./: .gitignore  ARCHITECTURE.md  Capturar-Cookie-TeraBox.bat  Configurar-TeraBox.bat  DevStatic-Browser.bat  DevStatic-Live.bat  Iniciar-Isolado.bat  Iniciar.bat  Montar-TeraBox.bat  README.md  pyproject.toml  requirements.txt
Static/: index.html  script.js
docs/: CTK-MIGRATION.md  ESTRUTURA.md  GIT-CURSOR.md  GITIGNORE-AUDIT.md  INSTALLER.md  RDRIVE-ISOLATED-BROWSER.md  RELEASE.md  release-notes-v0.2.1-semi-stable.md  release-notes-v0.2.2-semi-stable.md  release-notes-v0.2.3-semi-stable.md  ui-reference.md
installer/: RDriveSetup.iss
scripts/: README.md  _webengine_check_binaries.py  _webengine_probe_test.py  bootstrap_cookies_extension.ps1  build_app_icons.py  capture_terabox_cookie_gui.py  cleanup_drive_letter.ps1  configurar_terabox.ps1  ensure_user_path.ps1  fetch_provider_icons.py  install_rclone_terabox.ps1  launch_terabox_chrome.ps1  mount_terabox.ps1  reset_vault.bat  reset_vault.ps1  restart_rdrive.ps1  sync_static_providers.py  verify_webengine.ps1
tests/: README.md  test_app_restart_ctk.py  test_app_service_delete.py  test_app_service_rename_letter.py  test_auto_update.py  test_cancel_propagation.py  test_chrome_cookies_extension.py  test_cloud_benchmark.py  test_combine_drives.py  test_cookie_extension_installer.py  test_ctk_add_drive_label.py  test_ctk_add_drive_remotes.py  test_ctk_add_drive_save.py  test_ctk_cloud_assistant.py  test_ctk_mount_letter_combo.py  test_ctk_navigation.py  test_ctk_provider_icons.py  test_ctk_smoke.py  test_drive_delete.py  test_drive_validation.py  test_edge_bootstrap.py  test_google_signin_rejection.py  test_guided_setup.py  test_mount_manager.py  test_oauth_isolated_browser.py  test_perf_idle.py  test_provider_list_sections.py  test_provider_setup_registry.py  test_rclone_config_answer.py  test_rdrive_isolated_chrome.py  test_shared_mount.py  test_subprocess_utils.py  (+10 more)
(+246 files in other folders)
