[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdrive"
version = "0.1.0"
description = "Rclone-based cloud drive mounter with RaiDrive-inspired UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.6.0",
  "PyQt6-WebEngine>=6.6.0",
  "platformdirs>=4.2.0",
  "cryptography>=42.0.0",
  "customtkinter>=5.2.2",
  "pystray>=0.19.5",
  "Pillow>=10.0.0",
  "playwright>=1.49.0",
]

[project.optional-dependencies]
cookies-install = ["playwright>=1.49.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rdrive.assets.branding" = ["**/*.png", "**/*.ico"]
"rdrive.assets.providers" = ["**/*.svg"]
"rdrive.assets.providers.cloud" = ["*.svg"]
"rdrive.assets.providers.storage" = ["*.svg"]
"rdrive.assets.providers.protocol" = ["*.svg"]
"rdrive.assets.providers.local" = ["*.svg"]
"rdrive.assets.providers._fallback" = ["*.svg"]
